--- a/i18n/ht.json
+++ b/i18n/ht.json
@@ -83,7 +83,7 @@
   "App.job.jobFullTimeRate": "Full-Time-Rate",
   "App.job.jobSponsoredAmount": "Patwone kantite lajan an",
   "App.job.jobPayFrequency": "Peye frekans",
-  "App.job.termsOfEmployment": "Regleman nan Travay",
+  "App.job.termOfEmployment": "Regleman nan Travay",
   "App.job.requirements": "Kondisyon",
   "App.job.postChangesButton": "Pòs chanjman",
   "App.job.cancleJob": "Anile Travay",
