fix broken logo, added evaluator translations

--- a/i18n/ht.json
+++ b/i18n/ht.json
@@ -67,6 +67,7 @@
   "App.profile.managingJobs": "Lis tout djòb w ap jere.",
   "App.profile.evaluatingJobs": "Lis tout travay ou yo ki nan lis kòm evalyatè a.",
   "App.profile.sponsoringJobs": "Lis tout travay ou te patwone.",
+  "App.job.evaluation": "Evalyasyon",
   "App.job.claim": "Reklamasyon",
   "App.job.claimPayout": "Reklamasyon Peye",
   "App.jobs.learnMoreButton": "APRANN PLIS",
@@ -86,9 +87,10 @@
   "App.job.termOfEmployment": "Regleman nan Travay",
   "App.job.requirements": "Kondisyon",
   "App.job.postChangesButton": "Pòs chanjman",
-  "App.job.cancleJob": "Anile Travay",
+  "App.job.cancelJob": "Anile Travay",
   "App.job.datePosted": "Dat li te ye",
   "App.job.claimTitle": "Reklamasyon",
+  "App.job.becomeEvaluatorForJob": "Vin Evalyatè",
   "App.job.claimDescription": "Reklamasyon yon travay se tou senpleman kòm klike sou Reklamasyon bouton an. Bouton an pral sèlman vizib si travay la pa te reklame pa nenpòt moun ak yon moun ki louvri sesyon an.",
   "App.job.sponsorDescription": "Travay parennaj se kote nenpòt moun nan mond lan ka bay ak kontribye nan ekosistèm travay la. Chwazi pou patwone asire transparans nan lajan ki bay ak ankourajman travayè travay pou kontinye fè ak aksepte travay.",
   "App.job.claimDisclaimer": "Reklamasyon sa a se aksepte kondisyon travay yo, ak tèm ak kondisyon, ak kòd kondwit nan Travay.",
