--- a/i18n/en.json
+++ b/i18n/en.json
@@ -67,6 +67,7 @@
   "App.profile.managingJobs": "List of all jobs you are managing.",
   "App.profile.evaluatingJobs": "List of all jobs you are listed as the Evaluator.",
   "App.profile.sponsoringJobs": "List of all jobs you've sponsored.",
+  "App.job.evaluation": "Evaluation",
   "App.job.claim": "Claim",
   "App.job.claimPayout": "Claim Payout",
   "App.jobs.learnMoreButton": "LEARN MORE",
@@ -86,9 +87,10 @@
   "App.job.termOfEmployment": "Term of Employment (Months)",
   "App.job.requirements": "Requirements",
   "App.job.postChangesButton": "Post Changes",
-  "App.job.cancleJob": "Cancel Job",
+  "App.job.cancelJob": "Cancel Job",
   "App.job.datePosted": "Date Posted",
   "App.job.claimTitle": "Claim",
+  "App.job.becomeEvaluatorForJob": "Become Evaluator",
   "App.job.claimDescription": "Claiming a job is as simply as clicking the button Claim. The button will only be visible if the job is not claimed by anyone and an individual is logged in.",
   "App.job.sponsorDescription": "Job sponsorship is where anyone in the world can donate and contribute to the workplace ecosystem. Choosing to sponsor ensures transparency in funds donated and incentives job workers to continue to perform and accept jobs.",
   "App.job.claimDisclaimer": "Claiming this position is to accept the job requirements, and terms and conditions, and code of conduct of Travay.",
