--- a/i18n/ht.json
+++ b/i18n/ht.json
@@ -17,6 +17,7 @@
   "App.helloMetaMask.network": "Rezo",
   "App.helloMetaMask.account": "Kont",
   "App.helloMetaMask.balance": "Balans",
+  "App.helloMetaMask.notMainNet": "Ou pa kounye a sou Rezo a Main, tanpri chanje nan Rezo a Main yo sèvi ak aplikasyon sa a.",
   "App.helloMetaMask.unlockMetaMask": "Tanpri Debloke MetaMask",
   "App.home.earn": "Fè lajan ki estab",
   "App.home.sameDayJobs": "Jwenn travay menm jou an",
@@ -69,6 +70,7 @@
   "App.profile.sponsoringJobs": "Lis tout travay ou te patwone.",
   "App.job.evaluation": "Evalyasyon",
   "App.job.claim": "Reklamasyon",
+  "App.job.evaluationDescription": "Apre yo fin reklame yon travay, yo dwe asiyen yon evalyatè. Si asiyen kòm yon evalyatè zòn anba a ap montre enfòmasyon adisyonèl. Yon evalyatè konfime fini travay la.",
   "App.job.claimPayout": "Reklamasyon Peye",
   "App.jobs.learnMoreButton": "APRANN PLIS",
   "App.jobs.postAJobButton": "Post yon travay",
