--- a/i18n/en.json
+++ b/i18n/en.json
@@ -71,6 +71,7 @@
   "App.profile.evaluatingJobs": "List of all jobs you are listed as the Evaluator.",
   "App.profile.sponsoringJobs": "List of all jobs you've sponsored.",
   "App.job.evaluation": "Evaluation",
+  "App.job.cityOfWork": "City Where Work is to be Performed",
   "App.job.evaluationDescription": "After a job is claimed an evaluator must be assigned. If assigned as an evaluator the below area will show additional information. An evaluator confirms the completion of work.",
   "App.job.claim": "Claim",
   "App.job.claimPayout": "Claim Payout",
@@ -85,7 +86,7 @@
   "App.job.requirementInstructions": "Add one requirement, then click Add Requirement, to add additional requirements.",
   "App.job.jobRequirements": "Requirements",
   "App.job.addRequirement": "Add Requirement",
-  "App.job.jobFullTimeRate": "Full-Time-Rate",
+  "App.job.jobFullTimeRate": "Full-Time-Rate (USD)",
   "App.job.jobSponsoredAmount": "Sponsored Amount",
   "App.job.jobPayFrequency": "Pay Frequency",
   "App.job.termOfEmployment": "Term of Employment (Months)",
