--- a/i18n/ht.json
+++ b/i18n/ht.json
@@ -71,6 +71,7 @@
   "App.profile.evaluatingJobs": "Lis tout travay ou yo ki nan lis kòm evalyatè a.",
   "App.profile.sponsoringJobs": "Lis tout travay ou te patwone.",
   "App.job.evaluation": "Evalyasyon",
+  "App.job.cityOfWork": "Vil kote travay la dwe fèt",
   "App.job.claim": "Reklamasyon",
   "App.job.evaluationDescription": "Apre yo fin reklame yon travay, yo dwe asiyen yon evalyatè. Si asiyen kòm yon evalyatè zòn anba a ap montre enfòmasyon adisyonèl. Yon evalyatè konfime fini travay la.",
   "App.job.claimPayout": "Reklamasyon Peye",
@@ -85,10 +86,10 @@
   "App.job.requirementInstructions": "Ajoute yon egzijans, epi klike sou Add Requirement, pou ajoute lòt kondisyon.",
   "App.job.jobRequirements": "Kondisyon",
   "App.job.addRequirement": "Ajoute Kondisyon",
-  "App.job.jobFullTimeRate": "Full-Time-Rate",
+  "App.job.jobFullTimeRate": "Full-Time-Rate (USD)",
   "App.job.jobSponsoredAmount": "Patwone kantite lajan an",
   "App.job.jobPayFrequency": "Peye frekans",
-  "App.job.termOfEmployment": "Regleman nan Travay",
+  "App.job.termOfEmployment": "Regleman nan Travay (Mwa)",
   "App.job.requirements": "Kondisyon",
   "App.job.postChangesButton": "Pòs chanjman",
   "App.job.cancelJob": "Anile Travay",
