updated translation of salary in job and jobs page

--- a/i18n/ht.json
+++ b/i18n/ht.json
@@ -86,7 +86,7 @@
   "App.job.requirementInstructions": "Ajoute yon egzijans, epi klike sou Add Requirement, pou ajoute lòt kondisyon.",
   "App.job.jobRequirements": "Kondisyon",
   "App.job.addRequirement": "Ajoute Kondisyon",
-  "App.job.jobFullTimeRate": "Full-Time-Rate (USD)",
+  "App.job.jobSalary": "Yon Salè (USD)",
   "App.job.jobSponsoredAmount": "Patwone kantite lajan an",
   "App.job.jobPayFrequency": "Peye frekans",
   "App.job.termOfEmployment": "Regleman nan Travay (Mwa)",
