fix evaluator user role

--- a/i18n/ht.json
+++ b/i18n/ht.json
@@ -10,7 +10,7 @@
   "App.nav.french": "Francais",
   "App.nav.english": "Angle",
   "App.nav.home": "Paj Lakay",
-  "App.job.mainNetModalTitle": "Ale nan rezo prensipal la",
+  "App.job.mainNetModalTitle": "Ale nan Rezo Prensipal la (Main Network)",
   "App.job.mainNetModalDescription": "Tanpri ale MetaMask epi chanje nan rezo prensipal la pou trete tranzaksyon ou.",
   "App.signInModal.googleSignIn": "Konekte avék Google",
   "App.signInModal.signOutWarning": "Sonje tou siyen soti nan MetaMask, yo anpeche èskrokri. Aprann plis bagay sou èskrokri isit la: https://fr.wikipedia.org/wiki/Hame%C3%A7onnage.",
@@ -108,6 +108,10 @@
   "App.job.approveWork": "Apwouve travay",
   "App.job.approveWorkDescription": "Apwobasyon istwa yo pral montre isit la. Yon fwa ke yon travay apwouve, travay la make konplè epi travayè a resevwa salè yo. Sa a se pa revèsib.",
   "App.job.payoutJobButton": "Peye Travay",
+  "App.job.workerClaimedPayoutNotificationTitle": "Siksè",
+  "App.job.workerClaimedPayoutNotificationText": "Ou pral wè salè ou nan kont MetaMask ou a byento.",
+  "App.job.jobEvaluatorNotificationTitle": "Mèsi!",
+  "App.job.jobEvaluatorNotificationText": "You are now the evaluator for this job.",
   "App.job.jobCanceledNotificationTitle": "Siksè!",
   "App.job.jobCanceledNotificationText": "Travay sa a te anile.",
   "App.job.jobSavedNotificationTitle": "Siksè",
