--- a/i18n/en.json
+++ b/i18n/en.json
@@ -108,6 +108,10 @@
   "App.job.approveWork": "Approve Work",
   "App.job.approveWorkDescription": "Approval history will be shown here. Once a job is approved, the job is marked complete and the worker receives their salary. This is not reversible.",
   "App.job.payoutJobButton": "Payout Job",
+  "App.job.workerClaimedPayoutNotificationTitle": "Success",
+  "App.job.workerClaimedPayoutNotificationText": "You will see your salary in your MetaMask account soon.",
+  "App.job.jobEvaluatorNotificationTitle": "Thank you!",
+  "App.job.jobEvaluatorNotificationText": "You are now the evaluator for this job.",
   "App.job.jobCanceledNotificationTitle": "Success!",
   "App.job.jobCanceledNotificationText": "This job has been cancelled.",
   "App.job.jobSavedNotificationTitle": "Success",
