--- a/i18n/ht.json
+++ b/i18n/ht.json
@@ -1,11 +1,11 @@
 {
-  "App.core.description": "Travay nan long tèm nan Ayiti",
+  "App.core.description": "Sous Travay Ayiti",
   "App.nav.jobs": "Travay",
   "App.nav.profile": "Pwofil",
   "App.nav.signin": "Konekte",
   "App.nav.signout": "Dekonekte",
   "App.nav.createJob": "Post yon Travay",
-  "App.nav.tip": "Pwent",
+  "App.nav.tip": "Tep",
   "App.nav.kreyol": "Kreyòl",
   "App.nav.french": "Francais",
   "App.nav.english": "Angle",
@@ -13,27 +13,27 @@
   "App.job.mainNetModalTitle": "Ale nan Rezo Prensipal la (Main Network)",
   "App.job.mainNetModalDescription": "Tanpri ale MetaMask epi chanje nan \"Rezo Prensipal\" la pou trete tranzaksyon ou.",
   "App.signInModal.googleSignIn": "Konekte avék Google",
-  "App.signInModal.signOutWarning": "Sonje tou siyen soti nan MetaMask, yo anpeche èskrokri. Aprann plis bagay sou èskrokri isit la: https://fr.wikipedia.org/wiki/Hame%C3%A7onnage.",
-  "App.signInModal.googleSignOut": "Siyen soti ak Google",
+  "App.signInModal.signOutWarning": "Sonje ou ka soti sou MetaMask, pou anpeche phishing (yon tip de frod) fèt. Aprann plis sou phishing la a: https://fr.wikipedia.org/wiki/Hame%C3%A7onnage.",
+  "App.signInModal.googleSignOut": "Dekonekte ak Google",
   "App.helloMetaMask.installed": "Enstale",
   "App.helloMetaMask.network": "Rezo",
   "App.helloMetaMask.account": "Kont Ethereum",
   "App.helloMetaMask.balance": "Balans",
-  "App.helloMetaMask.notMainNet": "Ou pa kounye a sou Rezo a Main, tanpri chanje nan Rezo a Main yo sèvi ak aplikasyon sa a.",
+  "App.helloMetaMask.notMainNet": "Nan moman ou poko sou Rezo Prensipal la, tanpri chanje, ale sou Rezo Prensipal la pou ou ka itilize aplikasyon an.",
   "App.helloMetaMask.unlockMetaMask": "Tanpri Debloke MetaMask",
   "App.home.earn": "Fè lajan ki estab",
-  "App.home.sameDayJobs": "Jwenn travay menm jou an",
+  "App.home.sameDayJobs": "Ou pa bezwen CV, premye ki aplike a jwenn travay la.",
   "App.home.sameDayJobsDescription": "Jwenn yon travay ki bay sitwayen libète pou deside. Jwenn on travay alontèm, kap ede w jwenn mobilite ekonomik",
-  "App.home.receivePayments": "Resevwa Peman Instant",
-  "App.home.jobsPaidInCrypto": "Travay peye nan Cryptocurrency",
+  "App.home.receivePayments": "Jwenn kòb ou menm lè a",
+  "App.home.jobsPaidInCrypto": "W ap resevwa kob ou a an kriptomonè, ki vle di pi rapid, pi sekirize.",
   "App.home.crypto": "Pèman Cryptocurrency = Aksè a lajan ou koulye a.",
-  "App.home.howDoesItWork": "Kijan li travay?",
-  "App.home.register": "Jis enskri sèlman, ou pa bezwen anyen ankò",
-  "App.home.findAndClaim": "Jwenn yon travay ou vle epi klike sou reklamasyon",
-  "App.home.whenCompleteInstructions": "Lè travay la konplete, mete prèv ou nan travay epi klike sou travay konplè",
-  "App.home.mangerApproves": "Manadjè a ap apwouve travay ou a epi apré ap peye ou",
-  "App.home.getStartedFast": "Ki jan yo kòmanse te vit",
-  "App.home.noExperienceNeed": "Jwenn yon travay, reklame li ki pa gen okenn eksperyans ki nesesè!",
+  "App.home.howDoesItWork": "Kijan sa fonksyone?",
+  "App.home.register": "Ou jis bezwen enskri sou sit la, anyen ankò.",
+  "App.home.findAndClaim": "Nan lis travay yo, chwazi sa w ka fè a e klike sou \"reklamasyon\"",
+  "App.home.whenCompleteInstructions": "Lè w tèmine, w ap mete prèv ke w fini ak travay la",
+  "App.home.mangerApproves": "Manadjè (Manager) a ap apwouve travay ou a. Depi li kòrèk, l ap peye w imedyatman.",
+  "App.home.getStartedFast": "Ou vle kòmanse kounye a?",
+  "App.home.noExperienceNeed": "Ou pa bezwen pyès esperyans pou w jwenn yon travay jodi a!",
   "App.home.visitWebsite": "Vizite sit entènèt sa a nan la",
   "App.sectionOne.blockTitle": "Fè lajan ki estab",
   "App.sectionOne.blockHeader": "Menm jou Travay Marketplace la",
@@ -48,65 +48,65 @@
   "App.sectionFour.bullet4": "Manadjè travay ou ap apwouve travay ak peman pwoblèm",
   "App.sectionFour.paragraph": "Jwenn yon travay, reklame li ki pa gen okenn eksperyans ki nesesè!",
   "App.helloMetaMask.unsupportedNetwork": "Sa a se yon rezo sipòte. Tanpri chanje nan Rezo a Main (Main Network).",
-  "App.tip.sendTipButton": "Voye tip",
+  "App.tip.sendTipButton": "Voye tep",
   "App.tip.tipSentTitle": "Siksè!",
   "App.tip.tipSentText": "Transfè DAI ou konplè!",
   "App.job.editProfileIcon": "Korije Pwofil",
   "App.tip.tipPageTitle": "Ide Nenpòt moun!",
-  "App.tip.tipPageDescription": "Voye cryptocurrency (DAI) pou nenpòt moun. Pou yon travay byen fè, pou yon sèvis, pou lwaye, manje ak plis ankò. Sonje ke DAI $ 1 egal a $ 1",
-  "App.tip.receiverDescription": "Paste nan adrès ethereum moun ki ta dwe resevwa DAI ou. Sonje sa a se irevokabl konsa asire w ke ou gen adrès ki dwat!",
-  "App.tip.amountDescription": "Antre nan konbyen lajan ou ta renmen voye nan USD.",
+  "App.tip.tipPageDescription": "Voye kriptomonè (DAI) pou nenpòt moun. Pou yon travay byen fè, pou yon sèvis, pou lwaye, manje ak plis ankò. Sonje ke DAI $ 1 egal a $ 1",
+  "App.tip.receiverDescription": "Mete nan Ethereum adrès moun ki ta sipoze resevwa lajan DAI ou a. Pa bliye, sonje ke sa irevèsib (paka anile), pou sa asire'w ke ou gen bon adrès la!",
+  "App.tip.amountDescription": "Antre nan konbyen lajan ou ta renmen voye an USD.",
   "App.job.notEditingProfileIcon": "Korije Pwofil",
   "App.profile.pageTitle": "Pwofil",
   "App.profile.updateProfileTitle": "Siksè!",
   "App.profile.updateProfileText": "Pwofil ou aktyalize!",
-  "App.profile.updateProfileButton": "Mete ajou Profile",
+  "App.profile.updateProfileButton": "Korije",
   "App.profile.optInTexts": "Mwen vle resevwa mesaj tèks lè gen nouvo djòb.",
   "App.profile.subscribeToMailingList": "Mwen vle resevwa mesaj imel lè gen nouvo djòb.",
   "App.profile.updateProfile": "Mete nimewo telefòn ou.",
   "App.profile.incompleteJobs": "Lis tout travay ki toujou louvri.",
-  "App.profile.completedJobs": "Lis tout travay ki te konplete epi yo fèmen.",
-  "App.profile.canceledJobs": "Lis tout travay ki te anile tout.",
+  "App.profile.completedJobs": "Lis tout travay ki te fini epi ki fèmen.",
+  "App.profile.canceledJobs": "Lis tout travay ki te anile.",
   "App.profile.managingJobs": "Lis tout djòb w ap jere.",
-  "App.profile.evaluatingJobs": "Lis tout travay ou yo ki nan lis kòm evalyatè a.",
+  "App.profile.evaluatingJobs": "Lis tout ou te mete tankou yon evalyatè.",
   "App.profile.sponsoringJobs": "Lis tout travay ou te patwone.",
-  "App.job.evaluation": "Evalyasyon",
+  "App.job.evaluation": "Evaliyason",
   "App.job.cityOfWork": "Vil kote travay la dwe fèt",
   "App.job.claim": "Reklamasyon",
-  "App.job.evaluationDescription": "Apre yo fin reklame yon travay, yo dwe asiyen yon evalyatè. Si asiyen kòm yon evalyatè zòn anba a ap montre enfòmasyon adisyonèl. Yon evalyatè konfime fini travay la.",
+  "App.job.evaluationDescription": "Aprè job la fin reklame, yon evaliyatè dwe bay atribisyon li. Yon evalyatè konfime finisman travay la. Si w'ap atribiye tankou yon evaliyatè. Zòn anba pral montre infòmesyon adisyonèl yo.",
   "App.job.claimPayout": "Reklamasyon Peye",
   "App.jobs.learnMoreButton": "APRANN PLIS",
-  "App.jobs.postAJobButton": "Post yon travay",
+  "App.jobs.postAJobButton": "Kreye yon travay",
   "App.job.editJobIcon": "Modifye",
   "App.job.pageHeader": "Travay",
   "App.job.jobDescription": "Deskripsyon",
   "App.job.jobDomain": "Domèn",
   "App.job.jobSkill": "Konpetans",
   "App.job.isEditingInstructions": "Apre yo fin afiche yon travay, ou ka mete ajou sèlman sou Deskripsyon ak Kondisyon.",
-  "App.job.requirementInstructions": "Ajoute yon egzijans, epi klike sou Add Requirement, pou ajoute lòt kondisyon.",
+  "App.job.requirementInstructions": "Ajoute yon egzijans, epi klike sou \"Ajoute kondisyon\", pou ajoute lòt kondisyon.",
   "App.job.jobRequirements": "Kondisyon",
   "App.job.addRequirement": "Ajoute Kondisyon",
-  "App.job.jobSalary": "Yon salè (USD)",
+  "App.job.jobSalary": "Salè a (USD)",
   "App.job.jobSponsoredAmount": "Patwone kantite lajan an",
   "App.job.jobPayFrequency": "Peye frekans",
-  "App.job.termOfEmployment": "Regleman nan Travay (Mwa)",
+  "App.job.termOfEmployment": "Regleman pou Travay (Mwa)",
   "App.job.requirements": "Kondisyon",
-  "App.job.postChangesButton": "Pòs chanjman",
+  "App.job.postChangesButton": "Admèt post la",
   "App.job.cancelJob": "Anile Travay",
-  "App.job.datePosted": "Dat li te ye",
+  "App.job.datePosted": "Dat li te poste a",
   "App.job.claimTitle": "Reklamasyon",
   "App.job.becomeEvaluatorForJob": "Vin Evalyatè",
   "App.job.claimDescription": "Reklamasyon yon travay se tou senpleman kòm klike sou Reklamasyon bouton an. Bouton an pral sèlman vizib si travay la pa te reklame pa nenpòt moun ak yon moun ki louvri sesyon an.",
-  "App.job.sponsorDescription": "Travay parennaj se kote nenpòt moun nan mond lan ka bay ak kontribye nan ekosistèm travay la. Chwazi pou patwone asire transparans nan lajan ki bay ak ankourajman travayè travay pou kontinye fè ak aksepte travay.",
+  "App.job.sponsorDescription": "Travay parennaj se kote nenpòt moun nan mond lan ka bay ak kontribye nan ekosistèm travay la. Chwazi pou patwone pou asire transparans nan lajan ki bay pou ankouraje travayè travay epi pou kontinye fè ak aksepte travay.",
   "App.job.claimDisclaimer": "Reklamasyon sa a se aksepte kondisyon travay yo, ak tèm ak kondisyon, ak kòd kondwit nan Travay.",
-  "App.job.sponsorJobButton": "Sipòtè yon Travay",
+  "App.job.sponsorJobButton": "Sponsorize yon Travay",
   "App.job.proofOfWorkTitle": "Prèv Travay",
   "App.job.uploadProofOfWorkTitle": "Voye prèv travay",
-  "App.job.proofOfWorkDescription": "Ki baze sou egzijans yon djòb, Manadjè Job la ka mande prèv ke travay la te fini. Pou egzanp, yon foto nan yon pye bwa plante. Si travayè a bay prèv li pral montre anba a.",
+  "App.job.proofOfWorkDescription": "Ki baze sou egzijans yon djòb, Manadjè Job la ka mande prèv ke travay la te fini. Pou egzanp, yon foto nan yon pye bwa plante. Si travayè a bay prèv li pral parèt anba a.",
   "App.job.uploadFileButton": "Soumèt Prèv",
   "App.job.uploadProofOfWorkButton": "what does this do?",
   "App.job.approveWork": "Apwouve travay",
-  "App.job.approveWorkDescription": "Apwobasyon istwa yo pral montre isit la. Yon fwa ke yon travay apwouve, travay la make konplè epi travayè a resevwa salè yo. Sa a se pa revèsib.",
+  "App.job.approveWorkDescription": "Prèv istwa you pral parèt la a. Yon fwa ke yon travay fin apwouve, travay la make \"fini\" epi travayè a ap resevwa salè li a. Men sa p'ap kabap revèsib.",
   "App.job.payoutJobButton": "Peye Travay",
   "App.job.workerClaimedPayoutNotificationTitle": "Siksè",
   "App.job.workerClaimedPayoutNotificationText": "Ou pral wè salè ou nan kont MetaMask ou a byento.",
@@ -157,14 +157,15 @@
   "App.codeOfCode.mission": "Misyon nou",
   "App.codeOfCode.paragraph2": "Misyon Travay la se kiltive talan nan sitwayen chak jou pou kreye yon kominote restore ak opòtinite ekonomik nan echèl la. Nou 3 valè debaz yo se:",
   "App.getStarted.title": "Byen vit kòmanse",
-  "App.getStarted.note": "Remak: Travay se sèlman ki disponib ak Android ak Firefox.",
+  "App.getStarted.note": "Remak: Travay pa disponib sou iPhone.",
   "App.getStarted.jobWorkersTitle": "Travayè",
   "App.getStarted.install": "Enstale",
-  "App.getStarted.browser": "navigatè (si sou telefòn mobil).",
-  "App.getStarted.step2": "Ouvri sesyon an nan travay ak kont Gmail ou. Pa gen yon sèl? Enskri",
-  "App.getStarted.here": "isit la",
-  "App.getStarted.extension": "ekstansyon",
-  "App.getStarted.startJob": "Chwazi yon travay epi yo kòmanse travay imedyatman!",
+  "App.getStarted.installBrowser": "Enstale navigatè",
+  "App.getStarted.browser": " (si w sou telefòn).",
+  "App.getStarted.step2": "Konekte ak kont Gmail ou. Ou poko genyen? Ou ka al kreye youn ",
+  "App.getStarted.here": "la",
+  "App.getStarted.installExtension": "Enstale ekstansyon Firefox",
+  "App.getStarted.startJob": "Chwazi youn nan travay sou platfòm nan epi ou ka kòmanse menm lè a!",
   "App.getStarted.jobPosters": "Administratè yo",
   "App.getStarted.fundMetaMask": "Fon kont MetaMask ou a ak DAI pa klike",
   "App.getStarted.thingsToRememberTitle": "Bagay sa yo sonje",
