refactored blockcahin functions and updated translations

--- a/i18n/ht.json
+++ b/i18n/ht.json
@@ -111,7 +111,7 @@
   "App.job.workerClaimedPayoutNotificationTitle": "Siksè",
   "App.job.workerClaimedPayoutNotificationText": "Ou pral wè salè ou nan kont MetaMask ou a byento.",
   "App.job.jobEvaluatorNotificationTitle": "Mèsi!",
-  "App.job.jobEvaluatorNotificationText": "You are now the evaluator for this job.",
+  "App.job.jobEvaluatorNotificationText": "Ou se kounye a evalyatè a pou travay sa a.",
   "App.job.jobCanceledNotificationTitle": "Siksè!",
   "App.job.jobCanceledNotificationText": "Travay sa a te anile.",
   "App.job.jobSavedNotificationTitle": "Siksè",
