--- a/i18n/ht.json
+++ b/i18n/ht.json
@@ -81,6 +81,7 @@
   "App.job.evaluation": "Evaliyason",
   "App.job.cityOfWork": "Vil kote travay la dwe fèt",
   "App.job.claim": "Reklamasyon",
+  "App.job.countryOfWork": "Peyi",
   "App.job.evaluationDescription": "Aprè job la fin reklame, yon evaliyatè dwe bay atribisyon li. Yon evalyatè konfime finisman travay la. Si w'ap atribiye tankou yon evaliyatè. Zòn anba pral montre infòmesyon adisyonèl yo.",
   "App.job.claimPayout": "Reklamasyon Peye",
   "App.jobs.learnMoreButton": "APRANN PLIS",
