added a question to home page on text notificaitons

--- a/i18n/ht.json
+++ b/i18n/ht.json
@@ -21,6 +21,7 @@
   "App.helloMetaMask.balance": "Balans",
   "App.helloMetaMask.notMainNet": "Nan moman ou poko sou Rezo Prensipal la, tanpri chanje, ale sou Rezo Prensipal la pou ou ka itilize aplikasyon an.",
   "App.helloMetaMask.unlockMetaMask": "Tanpri Debloke MetaMask",
+  "App.home.howToKnowOfNewJobs": "Koman map fè poum konnen lè genyen yon travay ki disponible?",
   "App.home.earn": "Fè lajan ki estab",
   "App.home.sameDayJobs": "Ou pa bezwen CV, premye ki aplike a jwenn travay la.",
   "App.home.sameDayJobsDescription": "Jwenn yon travay ki bay sitwayen libète pou deside. Jwenn on travay alontèm, kap ede w jwenn mobilite ekonomik",
@@ -161,7 +162,7 @@
   "App.createJob.salaryPayoutDisclaimer": "Sonje: (1) Salè ou lis anwo a ap fèt dedui ak peye travayè a respire ki baze sou mwa yo total ou te tape pi wo a. (2) Nou kolekte 2% kantite lajan total salè. Ki baze sou salè ou te antre anlè travayè a nan total pral resevwa apeprè: ",
   "App.createJob.pageDescription": "Itilize fòm ki anba a pou kreye yon travay 6 mwa oswa 12 mwa.",
   "App.createJob.requirementInstructions": "Tanpri ajoute kondisyon ou yo nan lòd pou travay la yo dwe konsidere kòm konplè. Add yon egzijans, epi klike sou Add Requirement, pou ajoute lòt kondisyon.",
-  "App.footer.getNotified": "Jwenn notifye nan nouvo travay.",
+  "App.footer.getNotified": "Jwenn notifye nan nouvo travay",
   "App.footer.contractUs": "Kontakte Nou",
   "App.footer.userGuide": "Gid Itilizatè",
   "App.footer.getStartedGuide": "Ann kòmanse",
