--- a/i18n/en.json
+++ b/i18n/en.json
@@ -21,6 +21,7 @@
   "App.helloMetaMask.balance": "Balance",
   "App.helloMetaMask.notMainNet": "You are not currently on the Main Network, please switch to the Main Network to use this application.",
   "App.helloMetaMask.unlockMetaMask": "Please Unlock MetaMask",
+  "App.home.howToKnowOfNewJobs": "How Will I know When There Are New Jobs?",
   "App.home.earn": "Earn Stable Income",
   "App.home.sameDayJobs": "Same Day Jobs Marketplace",
   "App.home.sameDayJobsDescription": "Travay provides a citizen driven, long-term jobs market, helping to provide to economic mobility.",
